# ferris-is-you

./: .gitignore  Cargo.toml  LICENSE  README.md  words.txt
ferris-base/: Cargo.toml
ferris-base/src/: unicode.rs
ferris-base/src/core/: direction.rs  element.rs  level.rs  rule.rs
ferris-base/tests/: and.rs  defeat.rs  facing.rs  fall.rs  has.rs  hot_melt.rs  is.rs  lonely.rs  move.rs  near.rs  on.rs  open_shut.rs  pull.rs  push.rs  shift.rs  sink_float.rs  stop.rs  swap.rs  tele.rs  weak.rs  win.rs  you.rs
ferris-base/tests/utils/: mod.rs
ferris-terminal/: Cargo.toml
ferris-terminal/src/: main.rs
ferris-wasm/: Cargo.toml
ferris-wasm/src/: lib.rs
ferris-wasm/www/: graphics.js  index.html  index.js  package-lock.json  package.json
levels/: test.txt
src/: lib.rs  main.rs  unicode.rs
src/core/: direction.rs  element.rs  level.rs  mod.rs  rule.rs
tests/: and.rs  defeat.rs  fall.rs  has.rs  hot_melt.rs  is.rs  move.rs  near.rs  on.rs  open_shut.rs  pull.rs  push.rs  shift.rs  sink_float.rs  stop.rs  swap.rs  tele.rs  weak.rs  win.rs  you.rs
tests/utils/: mod.rs
tools/: build_levels_from_baba_is_you.py
