[package]
name = "ferris-terminal"
version = "0.1.0"
authors = ["mfred <6153204+mfred488@users.noreply.github.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
termion = "*"
ferris-base = { path = "../ferris-base" }
